<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>walhalla</artifactId>
	<version>0.1</version>
	<packaging>jar</packaging>
	<name>walhalla</name>
	<description/>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<dependencies>
		<dependency>
			<groupId>org.ahocorasick</groupId>
			<artifactId>ahocorasick</artifactId>
			<version>0.6.3</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>1.14.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>conjure</artifactId>
			<version>1.2.1</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>evergarden</artifactId>
			<version>1.0.3</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.atilika.kuromoji</groupId>
			<artifactId>kuromoji-ipadic</artifactId>
			<version>0.9.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j</artifactId>
			<version>1.1.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-google-ai-gemini</artifactId>
			<version>1.1.0-rc1</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-http-client-jdk</artifactId>
			<version>1.1.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>psychopath</artifactId>
			<version>2.2.1</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>sinobu</artifactId>
			<version>4.13.0</version>
			<scope>compile</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/walhalla</url>
	<scm>
		<url>https://github.com/teletha/walhalla</url>
		<connection>scm:git:https://github.com/teletha/walhalla.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/walhalla.git</developerConnection>
	</scm>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/teletha/walhalla/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<name>teletha</name>
			<email/>
			<url>https://github.com/teletha</url>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>17</release>
					<encoding>UTF-8</encoding>
					<compilerId>javac</compilerId>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>-ea   -Dfile.encoding=UTF-8</argLine>
					<reportFormat>plain</reportFormat>
					<consoleOutputReporter>
						<disable>true</disable>
					</consoleOutputReporter>
					<statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter"/>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>me.fabriciorby</groupId>
						<artifactId>maven-surefire-junit5-tree-reporter</artifactId>
						<version>1.4.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>